src/program/latex/snapshots/quil_rs__program__latex__tests__document__footer.snap
---
source: src/program/latex/mod.rs
assertion_line: 224
expression: "r\"\\end{tikzcd}\n\\end{document}\""
---
\end{tikzcd}
\end{document}
