src/program/latex/snapshots/quil_rs__program__latex__tests__document__template.snap
---
source: src/program/latex/mod.rs
assertion_line: 213
expression: "get_latex(\"\")"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}

\end{tikzcd}
\end{document}
